--- a/registry/src/components/Table/index.css
+++ b/registry/src/components/Table/index.css
@@ -58,7 +58,7 @@
 }
 
 .table-head-cell-wrapper {
-  @apply text-body-compact-01 relative h-full w-full whitespace-nowrap border-b border-r border-[var(--par-color-border-table)] bg-[var(--par-color-bg-table)] px-4 py-3 text-left font-medium text-[var(--par-color-text-table-header-cell-item-enabled)];
+  @apply text-body-compact-01 relative h-fit  w-full whitespace-nowrap border-b border-r border-[var(--par-color-border-table)] bg-[var(--par-color-bg-table)] px-4 py-3 text-left font-medium text-[var(--par-color-text-table-header-cell-item-enabled)];
 }
 
 .table-head-cell {
@@ -131,7 +131,7 @@
 }
 
 .table-body-cell-wrapper {
-  @apply text-body-01 h-full w-full overflow-hidden border-b border-r border-[var(--par-color-border-table)] bg-[var(--par-color-bg-table)] px-4 py-3 text-left align-middle text-[var(--par-color-text-table-content-item)];
+  @apply text-body-01 h-fit w-full overflow-hidden border-b border-r border-[var(--par-color-border-table)] bg-[var(--par-color-bg-table)] px-4 py-3 text-left align-middle text-[var(--par-color-text-table-content-item)];
 }
 
 .table-body-cell-wrapper.frozen-cell {
@@ -152,6 +152,13 @@
 
 .table-checkbox {
   @apply w-12 min-w-12 bg-[var(--par-color-bg-table)];
+}
+
+.table-checkbox .checkbox-input {
+  @apply m-0;
+}
+.table-checkbox .checkbox-wrapper {
+  @apply flex h-5 items-center justify-center;
 }
 
 .table-footer {
