--- a/registry/src/components/FileInput/variables.css
+++ b/registry/src/components/FileInput/variables.css
@@ -1,1 +1,3 @@
-@import url(../BaseInput/variables.css);
+@import '../theme/alias/text-icon-colors.css';
+@import '../theme/alias/border.css';
+@import '../theme/alias/background.css';
