doc: update doc

--- a/registry/src/components/theme/index.css
+++ b/registry/src/components/theme/index.css
@@ -1,4 +1,7 @@
-@import '../global.css';
+@import url(../global.css);
+@import url(./alias/background.css);
+@import url(./alias/border.css);
+@import url(./alias/text-icon-colors.css);
 
 :root,
 [data-scheme='light'] {
