--- a/registry/src/components/Avatar/variables.css
+++ b/registry/src/components/Avatar/variables.css
@@ -2,7 +2,7 @@
 [data-theme='light'] {
   /* TEXT */
   --par-color-text-avatar: var(--par-white);
-  --par-color-text-avatar-disabled: rgba(255, 255, 255, 0.5);
+  --par-color-text-avatar-disabled: rgb(from var(--par-white) r g b / 0.5);
   --par-color-text-avatar-trigger: var(--par-gray-700);
 
   /* BG */
@@ -12,25 +12,23 @@
 
   /* BORDER */
   --par-color-border-avatar: var(--par-white);
+  --par-color-border-avatar-disabled: rgb(from var(--par-white) r g b / 0.5);
   --par-color-border-avatar-alternative: var(--par-gray-25);
-
-  /* STATUS COLORS */
-  --par-color-status-online: var(--par-green-600);
-  --par-color-status-away: var(--par-yellow-600);
-  --par-color-status-busy: var(--par-red-600);
-  --par-color-status-offline: var(--par-gray-400);
-
-  /* STATUS BORDER */
-  --par-color-border-avatar-status-online: var(--par-green-600);
-  --par-color-border-avatar-status-away: var(--par-yellow-600);
-  --par-color-border-avatar-status-busy: var(--par-red-600);
-  --par-color-border-avatar-status-offline: var(--par-gray-400);
+  --par-color-border-avatar-alternative-disabled: rgb(from var(--par-gray-25) r g b / 0.5);
+  --par-color-border-avatar-gray: var(--par-gray-600);
+  --par-color-border-avatar-gray-disabled: var(--par-gray-100);
+  --par-color-border-avatar-red: var(--par-red-600);
+  --par-color-border-avatar-red-disabled: var(--par-red-100);
+  --par-color-border-avatar-green: var(--par-green-600);
+  --par-color-border-avatar-green-disabled: var(--par-green-100);
+  --par-color-border-avatar-yellow: var(--par-yellow-600);
+  --par-color-border-avatar-yellow-disabled: var(--par-yellow-100);
 }
 
 [data-theme='dark'] {
   /* TEXT */
   --par-color-text-avatar: var(--par-white);
-  --par-color-text-avatar-disabled: rgba(255, 255, 255, 0.5);
+  --par-color-text-avatar-disabled: rgb(from var(--par-white) r g b / 0.5);
   --par-color-text-avatar-trigger: var(--par-white);
 
   /* BG */
@@ -40,17 +38,15 @@
 
   /* BORDER */
   --par-color-border-avatar: var(--par-gray-950);
+  --par-color-border-avatar-disabled: rgb(from var(--par-gray-950) r g b / 0.5);
   --par-color-border-avatar-alternative: var(--par-gray-900);
-
-  /* STATUS COLORS */
-  --par-color-status-online: var(--par-green-400);
-  --par-color-status-away: var(--par-yellow-400);
-  --par-color-status-busy: var(--par-red-400);
-  --par-color-status-offline: var(--par-gray-500);
-
-  /* STATUS BORDER */
-  --par-color-border-avatar-status-online: var(--par-green-400);
-  --par-color-border-avatar-status-away: var(--par-yellow-400);
-  --par-color-border-avatar-status-busy: var(--par-red-400);
-  --par-color-border-avatar-status-offline: var(--par-gray-500);
+  --par-color-border-avatar-alternative-disabled: rgb(from var(--par-gray-900) r g b / 0.5);
+  --par-color-border-avatar-gray: var(--par-gray-900);
+  --par-color-border-avatar-gray-disabled: var(--par-gray-100);
+  --par-color-border-avatar-red: var(--par-red-700);
+  --par-color-border-avatar-red-disabled: var(--par-red-100);
+  --par-color-border-avatar-green: var(--par-green-700);
+  --par-color-border-avatar-green-disabled: var(--par-green-100);
+  --par-color-border-avatar-yellow: var(--par-yellow-700);
+  --par-color-border-avatar-yellow-disabled: var(--par-yellow-100);
 }
